cmake_minimum_required(VERSION 3.15)

project(poker)

set(BUILD_CARD5 OFF CACHE BOOL "" FORCE)
set(BUILD_CARD6 OFF CACHE BOOL "" FORCE)
set(BUILD_CARD7 ON CACHE BOOL "" FORCE)
set(BUILD_PLO4 OFF CACHE BOOL  "" FORCE)
set(BUILD_PLO5 OFF CACHE BOOL  "" FORCE)
set(BUILD_PLO6 OFF CACHE BOOL  "" FORCE)
set(BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

add_subdirectory(external/pokerhandevaluator/cpp)

set(SFML_BUILD_AUDIO FALSE CACHE BOOL "" FORCE)
set(SFML_BUILD_GRAPHICS FALSE CACHE BOOL "" FORCE)
set(SFML_BUILD_WINDOW FALSE CACHE BOOL "" FORCE)
set(SFML_BUILD_SYSTEM TRUE CACHE BOOL "" FORCE)
set(SFML_BUILD_NETWORK TRUE CACHE BOOL "" FORCE)
set(SFML_USE_SYSTEM_DEPS TRUE CACHE BOOL "" FORCE)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.1
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
FetchContent_MakeAvailable(SFML)

add_subdirectory(src)
target_link_libraries(poker PRIVATE pheval)
target_link_libraries(poker PRIVATE SFML::Network)